<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_add_stock"
        android:icon="@drawable/icon_add_stock"
        android:title="@string/menu_add_stock" />

    <item
        android:id="@+id/menu_sales"
        android:icon="@drawable/icon_sales"
        android:title="@string/menu_sales" />

    <item
        android:id="@+id/menu_purchase"
        android:icon="@drawable/icon_purchase"
        android:title="@string/menu_purchase" />

    <item
        android:id="@+id/menu_search_stock"
        android:icon="@drawable/icon_search_stock"
        android:title="@string/menu_search_stock" />

    <item
        android:id="@+id/menu_list_stock"
        android:icon="@drawable/icon_list_stock"
        android:title="@string/menu_list_stock" />

    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/icon_logout"
        android:title="@string/menu_logout" />
</menu>