<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Fragments.AddStockFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/input_controller_vertical_margin"
                android:text="@string/fragment_add_stock_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/input_controller_vertical_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_add_stock_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_add_stock_item_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/input_controller_vertical_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_add_stock_item_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_add_stock_item_quantity" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/input_controller_vertical_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_add_stock_item_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_add_stock_item_price" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/radio_group_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_add_stock_taxable_label"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/fragment_add_stock_taxable_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/input_controller_vertical_margin">

                <RadioButton
                    android:id="@+id/fragment_add_stock_taxable_yes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_add_stock_taxable_yes" />

                <RadioButton
                    android:id="@+id/fragment_add_stock_taxable_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_add_stock_taxable_no" />
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_add_stock_save_btn"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/input_controller_vertical_margin"
                android:text="@string/fragment_add_stock_save_btn"
                app:cornerRadius="5dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_add_stock_cancel_btn"
                style="@style/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_list_back_btn"
                app:cornerRadius="5dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>