<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.SearchFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/input_controller_vertical_margin"
                android:text="@string/fragment_search_title" />
            <RadioGroup
                android:id="@+id/fragment_search_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/input_controller_vertical_margin">

                <RadioButton
                    android:id="@+id/fragment_radiobutton_search_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="50dp"
                    android:text="Code" />

                <RadioButton
                    android:id="@+id/fragment_radiobutton_search_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Name" />

            </RadioGroup>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/input_controller_vertical_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_search_item_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_search_item_code" />
            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:id="@+id/fragment_search_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_search_search_btn"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/input_controller_vertical_margin"
                android:text="@string/fragment_search_search_btn"
                app:cornerRadius="5dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_search_cancel_btn"
                style="@style/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_list_back_btn"
                app:cornerRadius="5dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>